--- a/webapps/backend-api/api/static/css/index.css
+++ b/webapps/backend-api/api/static/css/index.css
@@ -101,6 +101,7 @@ body {
     font-weight: 200;
     font-size: 1.2rem;
     font-family: 'Liberation', serif;
+    color: #007bff;
 }
 
 .team .team-nim {
