--- a/webapps/backend-api/api/static/css/posts.css
+++ b/webapps/backend-api/api/static/css/posts.css
@@ -65,11 +65,12 @@
     font-weight: 100;
     font-size: 1.5rem;
     font-family: 'Liberation', serif;
+    color: #007bff;
 }
 
 .posts-container .posts {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     flex-direction: row;
     flex-wrap: wrap;
@@ -77,20 +78,21 @@
 
 .posts-container .posts .post-pic {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     flex-direction: column;
     padding: 30px 30px;
     height: 360px;
 }
 
-.posts-container .posts .post-pic img {
-    width: 300px;
+.posts-container .posts .post-pic img { 
     height: 300px;
-    border-radius: 5%;
+    width: auto;
     opacity: 1;
     transition: .5s ease;
     backface-visibility: hidden;
+    padding: 8px;
+    background-color: white;
 }
 
 .posts-container .posts .post-pic:hover img {
@@ -102,7 +104,6 @@
     justify-content: space-between;
     align-items: center;
     flex-direction: column;
-    /* transition: .5s ease; */
     opacity: 0;
     position: relative;
     top: -175px;
