--- a/webapps/backend-api/api/static/css/profiles.css
+++ b/webapps/backend-api/api/static/css/profiles.css
@@ -24,7 +24,7 @@
 
 .profiles-container .profiles-row {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: flex-start;
     flex-direction: row;
     flex-wrap: wrap;
@@ -70,4 +70,5 @@
     margin-top: 5px;
     font-family: 'Liberation', serif;
     font-size: 1.1rem;
+    color: #007bff;
 }
